# FirstPythonPackage

./: LICENSE  README.md  setup.cfg
src/First_Package_Conor_Crilly.egg-info/: PKG-INFO  SOURCES.txt
src/example_pkg/: main.py
